// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
<<<<<<< HEAD
exports[`External Link disabled matches snapshot 1`] = `
=======
<<<<<<< HEAD
<<<<<<< HEAD
exports[`External Link disabled matches snapshot 1`] = `
=======
exports[`External Link Disabled link matches snapshot 1`] = `
>>>>>>> Adds tests to external-link
=======
exports[`External Link link matches snapshot 1`] = `
>>>>>>> Changes link for route-link
>>>>>>> Changes link for route-link
=======
exports[`External Link disabled matches snapshot 1`] = `
>>>>>>> Rebase master
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
<<<<<<< HEAD
<<<<<<< HEAD
  cursor: default;
=======
<<<<<<< HEAD
<<<<<<< HEAD
  cursor: default;
=======
>>>>>>> Adds tests to external-link
=======
  cursor: default;
>>>>>>> Adds onClick callback to external-link
>>>>>>> Adds onClick callback to external-link
=======
  cursor: default;
>>>>>>> Rebase master
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: 8px;
}

.c0.iconOnly svg {
  margin: 0;
}

.c0.external {
  color: #7fbfd2;
}

.c0.external:visited {
  color: #094c6c;
}

.c0.external:visited svg {
  color: #094c6c;
}

.c0.navigation {
  color: #9ca7b4;
}

<a
  aria-disabled="true"
  className="c0 external"
  disabled={true}
>
<<<<<<< HEAD
<<<<<<< HEAD
=======
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> Link fixes
=======
>>>>>>> Rebase master
  External Link
</a>
`;

exports[`External Link matches snapshot 1`] = `
<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
  Navigation Link
=======
  External Link
>>>>>>> Link fixes
</a>
`;

<<<<<<< HEAD
exports[`External Link Link matches snapshot 1`] = `
>>>>>>> Adds tests to external-link
<<<<<<< HEAD
>>>>>>> Link fixes
=======
=======
exports[`External Link matches snapshot 1`] = `
>>>>>>> Changes link for route-link
>>>>>>> Changes link for route-link
=======
>>>>>>> Rebase master
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: 8px;
}

.c0.iconOnly svg {
  margin: 0;
}

.c0.external {
  color: #0080a5;
}

.c0.external:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.external:visited {
  color: #094c6c;
}

.c0.external:visited svg {
  color: #094c6c;
}

.c0.navigation {
  color: #57666e;
}

.c0.navigation:hover {
  color: #000;
}

.c0.navigation.active {
  color: #0080a5;
}

<a
  aria-disabled="false"
  className="c0 external"
  href="https://www.google.ca/"
>
  External Link
</a>
`;

exports[`External Link with icon matches snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
<<<<<<< HEAD
<<<<<<< HEAD
=======
<<<<<<< HEAD
=======
>>>>>>> Adds tests to external-link
=======
>>>>>>> Adds onClick callback to external-link
>>>>>>> Adds onClick callback to external-link
=======
>>>>>>> Rebase master
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: 8px;
}

.c0.iconOnly svg {
  margin: 0;
}

.c0.external {
  color: #0080a5;
}

.c0.external:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.external:visited {
  color: #094c6c;
}

.c0.external:visited svg {
  color: #094c6c;
}

.c0.navigation {
  color: #57666e;
}

.c0.navigation:hover {
  color: #000;
}

.c0.navigation.active {
  color: #0080a5;
}

<a
  aria-disabled="false"
  className="c0 external"
  href="#"
>
<<<<<<< HEAD
<<<<<<< HEAD
=======
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> Link fixes
=======
>>>>>>> Rebase master
  <svg
    color="currentColor"
    height="16"
    width="16"
  />
  External Link
</a>
`;

exports[`External Link without href matches snapshot 1`] = `
<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
  Navigation Link
=======
  External Link
>>>>>>> Link fixes
</a>
`;

exports[`External Link Link with icon matches snapshot 1`] = `
>>>>>>> Adds tests to external-link
<<<<<<< HEAD
>>>>>>> Link fixes
=======
=======
exports[`External Link with icon matches snapshot 1`] = `
>>>>>>> Changes link for route-link
>>>>>>> Changes link for route-link
=======
>>>>>>> Rebase master
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
<<<<<<< HEAD
<<<<<<< HEAD
  cursor: pointer;
=======
<<<<<<< HEAD
<<<<<<< HEAD
  cursor: pointer;
=======
>>>>>>> Adds tests to external-link
=======
  cursor: pointer;
>>>>>>> Adds onClick callback to external-link
>>>>>>> Adds onClick callback to external-link
=======
  cursor: pointer;
>>>>>>> Rebase master
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: 8px;
}

.c0.iconOnly svg {
  margin: 0;
}

.c0.external {
  color: #0080a5;
}

.c0.external:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.external:visited {
  color: #094c6c;
}

.c0.external:visited svg {
  color: #094c6c;
}

.c0.navigation {
  color: #57666e;
}

.c0.navigation:hover {
  color: #000;
}

.c0.navigation.active {
  color: #0080a5;
}

<a
  aria-disabled="false"
  className="c0 external"
  href="javascript:void(0)"
>
  <svg
    color="currentColor"
    height="16"
    width="16"
  />
<<<<<<< HEAD
<<<<<<< HEAD
  External Link
=======
<<<<<<< HEAD
<<<<<<< HEAD
  External Link
=======
  Navigation Link
>>>>>>> Adds tests to external-link
=======
  External Link
>>>>>>> Link fixes
>>>>>>> Link fixes
=======
  External Link
>>>>>>> Rebase master
</a>
`;
